src/snapshots/cronexpr__parser__tests__parse_crontab-16.snap
---
source: src/parser.rs
expression: "parse_crontab(\"* * * 25 * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
* * * 25 * Asia/Shanghai
      ^ value must be in range 1..=12; found 25
