src/snapshots/cronexpr__parser__tests__parse_crontab-20.snap
---
source: src/parser.rs
expression: "parse_crontab(\"29 ** * * * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
29 ** * * * Asia/Shanghai
    ^ malformed expression
